--- a/index.css
+++ b/index.css
@@ -11,7 +11,7 @@
 }
 
 .front-page{
-    background-image: url('./assets/images/ironthrone.png');
+    background-image: url('./assets/images/throne.png');
     background-repeat: no-repeat;
     background-position: 50% 50%;
     background-size: 100vw 100vh;
