--- a/index.css
+++ b/index.css
@@ -129,15 +129,28 @@ h1, h2, h3, p {
     background-size: 100vw 100vh;
 }
 
+.header{
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    width: 52rem;
+
+}
+
+.play{
+    width: 25%;
+    margin: 0 0 0 2rem;
+}
+
 .table{
     display: flex;
 }
 
 .column{
     margin: 2rem;
-    border-bottom: solid 2px white;
-    border-left: solid 2px white;
-    border-right: solid 2px white;
+    border-bottom: solid 2px darkslategray;
+    border-left: solid 2px darkslategray;
+    border-right: solid 2px  darkslategray;
 }
 
 .container{
@@ -147,18 +160,21 @@ h1, h2, h3, p {
 }
 
 .name{
-    border-top: solid 2px white;
-    border-right: solid 2px white;
-    width: 15rem;
+    border-top: solid 2px darkslategray;
+    border-right: solid 2px darkslategray;
+    width: 20rem;
+    padding: 0.2rem;
+    color: black;
+    font-size: 14px;
+    background-color: white;
 }
 
 .value{
-    border-top: solid 2px white;
+    border-top: solid 2px darkslategray;
     width:25% ;
     display: flex;
     justify-content: center;
-}
-
-.play{
-    width: 50%;
+    padding: 0.2rem;
+    background-color: white;
+    color: black;
 }
